# elif_yayinlari

./: BLUETOOTH_REMOTE_CONTROL.md  Installer_Bootstrap.cs  README.md  package_for_github.ps1  pubspec.yaml  service_account.json
.claude/: settings.local.json
android/app/: build.gradle.kts
assets/: service_account.enc
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: access_codes.dart  drawing_pen_main.dart  folder_homepage.dart  login_page.dart  main.dart  soru_cozucu_service.dart  splash_screen.dart  version_checker.dart
lib/controllers/: folder_home_controller.dart
lib/dropbox/: dropbox_auth_page.dart  dropbox_oauth.dart  dropbox_service.dart  models.dart
lib/google_drive/: google_drive_auth.dart  google_drive_service.dart  models.dart
lib/models/: app_models.dart  crop_data.dart  downloaded_book.dart  page_content.dart
lib/overlay_drawing/: drawing_canvas.dart  drawing_overlay_manager.dart  drawing_overlay_window.dart  drawing_toolbar.dart
lib/services/: bluetooth_constants.dart  bluetooth_input_handler.dart  bluetooth_server_dart.dart  bluetooth_server_process.dart  bluetooth_server_service.dart  bluetooth_server_windows.dart  book_opening_service.dart  book_storage_service.dart  drawing_pen_launcher.dart  toc_detector_service.dart  update_service.dart  (+2 more)
linux/: CMakeLists.txt
remote_control_app/: README.md  pubspec.yaml
test/: widget_test.dart
tool/: encrypt_sa.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/bluetooth_server/: CMakeLists.txt  bluetooth_server_standalone.cpp
(+86 files in other folders)
